# crockerdust

./: README.md  pyproject.toml
crockerdust/: GEMS_extinction_model.py  cmGEMS.py
docs/: README.rst  conf.py
docs/_build/: README.html  index.html  search.html  searchindex.js
docs/_build/.doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/_sources/: README.rst.txt  index.rst.txt
docs/_build/doctrees/: README.doctree  environment.pickle
docs/_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  searchindex.js
docs/_build/html/.doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/html/_sources/: index.rst.txt
