[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.0"
description = "Describe your package in one line"
authors = [
    { name = "YourName", email = "yourname@example.com" }
]
readme = "README.md"
license = { text = "CC-BY-NC" } # adjust if you use a different license
requires-python = ">=3.8"           # set the minimum Python version you support

# -------------------------------------------------
# Copy the packages you would otherwise put in requirements.txt 
dependencies = [
    "numpy",
    "astropy"
]

# -------------------------------------------------
# Optional: Development‑only dependencies (e.g., testing, linting)
[project.optional-dependencies]
dev = ["pytest>=7.0"]

# -------------------------------------------------
# Tell setuptools where the source lives
[tool.setuptools.packages.find]
where = ["mypackage"]       # where the main source code lives
